--- a/react-test/public/index.html
+++ b/react-test/public/index.html
@@ -27,6 +27,19 @@
     <title>React App</title>
   </head>
   <body>
+    <style>
+      body {
+        margin: 0%;
+        padding: 0%;
+      }
+
+      #root {
+        height: 100vh;
+        width: 100vw;
+        margin: 0px;
+        padding: 0px;
+      }
+    </style>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
