--- a/react-test/public/index.html
+++ b/react-test/public/index.html
@@ -31,6 +31,12 @@
       body {
         margin: 0%;
         padding: 0%;
+        font-family: Quicksand;
+      }
+
+      @font-face {
+        font-family: 'Quicksand';
+        src: url(font/Quicksand/Quicksand-VariableFont_wght.ttf);
       }
 
       #root {
